--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 id="title">NET<span>FLIX</span></h1>
-            <p id="description">Thank you for signing up at Netflix.Tell us more about yourself</p>
+            <h1 id="title" class="custom-header">NET<span>FLIX</span></h1>           
         </div>
+        <p id="description">Thank you for signing up at Netflix.Tell us more about yourself</p>
         <div class="form-div">
             <form id="survey-form">
                 <div class="name-box">
